# ferrisbot

./: .gitignore  Cargo.toml  LICENSE  README.md  assistant_role_definition.md  moderator_role_definition.md  role_definition.md  role_validator.md  tasks.md
prompts/: assistant_role_definition.md  moderator_role_definition.md
src/: lib.rs  main.rs
src/adapter/: database_repository.rs  endpoints.rs  mod.rs
src/application/: assistant_agent.rs  chess.rs  chess_domain_data.rs  domain.rs  member.rs  mod.rs  moderator.rs  moderator_agent.rs
src/application/tools/: member_ban.rs  member_info.rs  member_mute.rs  message_reaction.rs  mod.rs  websearch.rs
