[package]
name = "ferrisbot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.104"
async-trait = "0.1.91"
dotenvy = "0.15.7"
futures = "0.3.33"
json2markdown = "0.2.1"
log = "0.4.33"
mobot = { git = "https://github.com/slaytanic87/mobot", tag = "0.4.3" }
ollama-rs = { version = "0.3.5", features = ["macros", "tool-implementations",  "stream", "headers"] }
regex = "1.13.1"
reqwest = "0.13.4"
schemars = "1.2.1"
scraper = "0.27.0"
serde = "1.0.229"
serde_json = "1.0.151"
tokio = { version = "1.53.1", features = ["full"] }
